--- a/lifegpa/package.json
+++ b/lifegpa/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "lifegpa",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "axios": "^0.19.0",
     "formik": "^1.5.8",
@@ -13,5 +16,26 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "yup": "^0.27.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
