--- a/lifegpa/package.json
+++ b/lifegpa/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "formik": "^1.5.8",
     "react": "^16.9.0",
+    "react-burger-menu": "^2.6.11",
     "react-circular-progressbar": "^2.0.2",
     "react-dom": "^16.9.0",
     "react-icons": "^3.7.0",
