--- a/lifegpa/package.json
+++ b/lifegpa/package.json
@@ -1,11 +1,10 @@
-"version": "0.1.0",
+{"version": "0.1.0",
 "private": true,
 "dependencies": {
   "axios": "^0.19.0",
   "formik": "^1.5.8",
   "react": "^16.9.0",
   "react-dom": "^16.9.0",
-  "react-scripts": "3.1.1"
   "react-redux": "^7.1.1",
   "react-router": "^5.0.1",
   "react-router-dom": "^5.0.1",
