--- a/lifegpa/package.json
+++ b/lifegpa/package.json
@@ -1,10 +1,10 @@
 {
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "axios": "^0.19.0",
     "formik": "^1.5.8",
-
     "react": "^16.9.0",
-    "react-burger-menu": "^2.6.11",
     "react-circular-progressbar": "^2.0.2",
     "react-dom": "^16.9.0",
     "react-icons": "^3.7.0",
@@ -15,5 +15,26 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "yup": "^0.27.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
