--- a/lifegpa/package.json
+++ b/lifegpa/package.json
@@ -8,6 +8,7 @@
     "react-circular-progressbar": "^2.0.2",
     "react-day-picker": "^7.3.2",
     "react-dom": "^16.9.0",
+    "react-icons": "^3.7.0",
     "react-scripts": "3.1.1",
     "react-redux": "^7.1.1",
     "react-router": "^5.0.1",
