--- a/lifegpa/package.json
+++ b/lifegpa/package.json
@@ -5,14 +5,15 @@
     "axios": "^0.19.0",
     "formik": "^1.5.8",
     "react": "^16.9.0",
+    "react-burger-menu": "^2.6.11",
     "react-circular-progressbar": "^2.0.2",
     "react-day-picker": "^7.3.2",
     "react-dom": "^16.9.0",
     "react-icons": "^3.7.0",
-    "react-scripts": "3.1.1",
     "react-redux": "^7.1.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
+    "react-scripts": "3.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "yup": "^0.27.0"
