--- a/lifegpa/package.json
+++ b/lifegpa/package.json
@@ -5,6 +5,7 @@
     "axios": "^0.19.0",
     "formik": "^1.5.8",
     "moment": "^2.24.0",
+    "node-sass": "^4.13.1",
     "react": "^16.9.0",
     "react-burger-menu": "^2.6.11",
     "react-circular-progressbar": "^2.0.2",
