--- a/lifegpa/package.json
+++ b/lifegpa/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "eslint-loader": "^3.0.3",
     "formik": "^1.5.8",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
@@ -15,7 +16,7 @@
     "react-redux": "^7.1.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.4.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "yup": "^0.27.0"
